# rust-exercises

./: .gitignore  .rgignore  README.md  _redirects  build.sh  build_fns.sh  cloudflare.sh  describe.sh  index-bottom.html  index-top.html  justfile  shell.nix
exercise-solutions/: Cargo.toml
exercise-solutions/async-chat/: Cargo.toml  book.toml
exercise-solutions/async-chat/docs/: SUMMARY.md  accept_loop.md  all_together.md  clean_shutdown.md  connecting_readers_and_writers.md  final_server_code.md  handling_disconnection.md  implementing_a_client.md  index.md  receiving_messages.md  sending_messages.md  specification.md
exercise-solutions/async-chat/src/: client.rs  main.rs  server.rs
exercise-solutions/bar/step3/: Cargo.toml
exercise-solutions/calculator/calc/: Cargo.toml
exercise-solutions/connected-mailbox/: Cargo.toml
exercise-solutions/connected-mailbox/simple_db/: Cargo.toml
exercise-solutions/connected-mailbox/tcp-server/: Cargo.toml
exercise-solutions/cpp-interop/: Cargo.toml  build.rs  example.csv  weather.csv
exercise-solutions/cpp-interop/src/: main.rs  wrapper.h
exercise-solutions/durable-file/step2/: Cargo.toml
exercise-solutions/durable-file/step3/: Cargo.toml
exercise-solutions/durable-file/step4/: Cargo.toml
exercise-solutions/durable-file/step5/: Cargo.toml
exercise-solutions/durable-file/step6/: Cargo.toml
exercise-solutions/files-match-result/: Cargo.toml
exercise-solutions/files-match-result/examples/: step_1.rs  step_2.rs  step_3.rs  step_4.rs  step_5.rs
exercise-solutions/files-match-result/src/: main.rs
exercise-solutions/fizzbuzz/: Cargo.toml
exercise-solutions/fizzbuzz/examples/: fizzbuzz.rs  fizzbuzz_match.rs
exercise-solutions/fizzbuzz/src/: main.rs
exercise-solutions/green-yellow/: Cargo.toml
exercise-solutions/iterators/: Cargo.toml
exercise-solutions/iterators/src/: main.rs
exercise-solutions/kani-linked-list/: Cargo.toml
exercise-solutions/kani-linked-list/src/: lib.rs
exercise-solutions/multi-threaded-mailbox/: Cargo.toml
exercise-solutions/multi-threaded-mailbox/simple-db/: Cargo.toml
exercise-solutions/multi-threaded-mailbox/with-arc/: Cargo.toml
exercise-solutions/multi-threaded-mailbox/with-scoped-threads/: Cargo.toml
exercise-solutions/rustlatin/step4/: Cargo.toml
exercise-solutions/shapes-part-1/: Cargo.toml
exercise-solutions/shapes-part-1/src/: lib.rs
exercise-solutions/shapes-part-2/: Cargo.toml
exercise-solutions/shapes-part-2/src/: lib.rs
exercise-solutions/shapes-part-3/: Cargo.toml
exercise-solutions/shapes-part-3/src/: lib.rs
exercise-solutions/shapes/src/: lib.rs
exercise-solutions/simple-db/step2/: Cargo.toml
exercise-solutions/simple-db/step4a/: Cargo.toml
exercise-solutions/simple-db/step4b/: Cargo.toml
exercise-solutions/simple-db/step4c/: Cargo.toml
exercise-solutions/simple-db/step4d/: Cargo.toml
exercise-solutions/simple-db/step4e/: Cargo.toml
exercise-solutions/simple_db/step2/: Cargo.toml
exercise-solutions/simple_db/step4a/: Cargo.toml
exercise-solutions/simple_db/step4b/: Cargo.toml
exercise-solutions/simple_db/step4c/: Cargo.toml
exercise-solutions/simple_db/step4d/: Cargo.toml
exercise-solutions/simple_db/step4e/: Cargo.toml
exercise-solutions/tcp-server-exercises/: Cargo.toml
exercise-solutions/urls-match-result/: Cargo.toml
exercise-solutions/urls-match-result/examples/: step_1.rs  step_2.rs  step_3.rs  step_4.rs  step_5.rs
exercise-solutions/urls-match-result/src/: main.rs
nrf52-code/boards/dk/: Cargo.toml
nrf52-code/boards/dk-migration/: Cargo.toml  README.md
nrf52-code/boards/dk-solution/: Cargo.toml  README.md
nrf52-code/boards/dongle/: Cargo.toml  README.md  loopback  memory.x
nrf52-code/dongle-fw/: Cargo.toml  build.rs
nrf52-code/dongle-fw/.cargo/: config.toml
nrf52-code/dongle-fw/src/: main.rs
nrf52-code/hal-app/: Cargo.toml
nrf52-code/hal-app/src/: lib.rs
nrf52-code/loopback-fw/: Cargo.toml
nrf52-code/loopback-fw-rtic/: Cargo.toml
nrf52-code/loopback-fw-rtic/.cargo/: config.toml
nrf52-code/loopback-fw-rtic/src/: main.rs
nrf52-code/loopback-fw/.cargo/: config.toml
nrf52-code/loopback-fw/src/: main.rs
nrf52-code/puzzle-fw/: Cargo.toml  build.rs
nrf52-code/puzzle-fw/src/: main.rs
nrf52-code/radio-app/: Cargo.toml  radio-app.sublime-project
nrf52-code/radio-app/.cargo/: config.toml
nrf52-code/radio-app/src/: lib.rs
nrf52-code/radio-embassy/: Cargo.toml
nrf52-code/radio-embassy/src/: main.rs
nrf52-code/sys-tick-test-2/: Cargo.toml
nrf52-code/sys-tick-test-2/src/: main.rs
nrf52-code/sys-tick-tests/: Cargo.toml
nrf52-code/sys-tick-tests/src/: main.rs
nrf52-code/usb-app/: Cargo.toml
nrf52-code/usb-app-solutions/: .gitignore  Cargo.toml
nrf52-code/usb-app-solutions/.cargo/: config.toml
nrf52-code/usb-app-solutions/traces/: linux-configured.txt  linux-enumeration.txt  macos-configured.txt  macos-enumeration.txt  win-configured.txt  win-enumeration.txt
nrf52-code/usb-app/.cargo/: config.toml
nrf52-code/usb-app/src/: lib.rs
nrf52-code/usb-lib/: Cargo.toml
nrf52-code/usb-lib/src/: lib.rs
qemu-code/uart-driver/: .gitignore  Cargo.toml  README.md  build.rs  criticalup.toml  linker.ld  memory.x  rust-toolchain.toml
qemu-code/uart-driver/.cargo/: config.toml
qemu-code/uart-driver/src/: boot.S  lib.rs  main.rs  uart_driver.rs  uart_driver_solution.rs
stm32-code/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
stm32-code/.cargo/: config.toml
stm32-code/nonsecure-app/: Cargo.toml  build.rs  memory.x
stm32-code/nucleo-u5a5zj-bsp/: Cargo.toml
stm32-code/nucleo-u5a5zj-bsp/src/: lib.rs
stm32-code/secure-loader/: Cargo.toml  build.rs  memory.x
stm32-code/step1-option-bytes/: Cargo.toml  build.rs  memory.x
stm32-code/step1-option-bytes/src/: main.rs
stm32-code/step2-secure-watermark/: Cargo.toml  build.rs
stm32-code/step2-secure-watermark/src/: main.rs
stm32-code/stm32u5-tiny-hal/: Cargo.toml
stm32-code/stm32u5-tiny-hal/src/: gpio.rs  gtzc.rs  lib.rs  ns_addr.rs  pwr.rs  rcc.rs  (+1 more)
xtask/: Cargo.toml
xtask/src/: main.rs  tasks.rs
(+319 files in other folders)
