[workspace]
resolver= "2"
members = [
  "fizzbuzz",
  "rustlatin/*",
  "simple-db/*",
  "green-yellow",
  "urls-match-result",
  "shapes-part-1",
  "shapes-part-2",
  "shapes-part-3",
  "tcp-server-exercises",
  "async-chat",
  "kani-linked-list",
  "iterators",
  "calculator/*",
  "cpp-interop",
]
