[package]
name = "kani-linked-list"
version = "0.1.0"
edition = "2021"

[dependencies]
kani = { version = "=0.56", git = "https://github.com/model-checking/kani", tag = "kani-0.56.0", optional = true }

[dev-dependencies]
kani-verifier = "=0.56.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)', 'cfg(kani)'] }
