[package]
authors = ["Ferrous Systems"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hal_app"
version = "0.0.0"
description = "Solutions for the nRF52 HAL exercises"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
dk = { path = "../boards/dk", features = ["radio"] }
heapless = "0.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3.8"
defmt-rtt = "0.4"

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
