[package]
authors = ["Ferrous Systems"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "loopback-fw"
version = "0.0.0"

[dependencies]
consts = { path = "../consts" }
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
critical-section = "1.1.2"
dongle = { path = "../boards/dongle" }
embedded-hal = "1.0"
usb-device = "0.3"
usbd-hid = "0.8"
usbd-serial = "0.2"

[build-dependencies]
rand = "0.8.5"

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
