[package]
authors = ["Ferrous Systems"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "puzzle-fw"
version = "0.0.0"

[dependencies]
cortex-m = {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "0.2.7"
heapless = "0.8"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
dongle = { path = "../boards/dongle" }
usb-device = "0.2.7"
usbd-serial = "0.1.0"
consts = { path = "../consts" }

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
