[package]
authors = ["Ferrous Systems"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "usb-app"
version = "0.0.0"

[build-dependencies]
consts = { path = "../consts" }
quote = "1"
usb2 = "0.0.1"

[dependencies]
consts = { path = "../consts" }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
defmt = "0.3.8"
defmt-rtt = "0.4"
dk = { path = "../boards/dk", features = ["advanced"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
usb = { path = "../usb-lib" }
usb2 = "0.0.1"

[dependencies.heapless]
version = "0.7.16"
features = ["defmt-impl"]

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false

