[package]
authors = ["Ferrous Systems"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "usb-app"
version = "0.0.0"

[build-dependencies]
consts = { path = "../consts" }
quote = "1"
usb2 = "0.0.1"

[dependencies]
consts = { path = "../consts" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
rtic = { version = "2", features = ["thumbv7-backend"] }
defmt = { git = "https://github.com/knurling-rs/defmt/", rev = "177c219", version = "1.0.1" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt/", rev = "177c219" }
dk = { path = "../boards/dk", features = ["advanced"] }
usb = { path = "../usb-lib" }
usb2 = "0.0.1"

[dependencies.heapless]
version = "0.7.16"
features = ["defmt-impl"]

# optimise a little bit
[profile.dev]
opt-level = 1

# enable LTO and turn on debug
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false

[patch.crates-io]
defmt = { git = "https://github.com/knurling-rs/defmt/", rev = "177c219", version = "1.0.1" }
