[package]
authors = ["Ferrous Systems"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "usb"
version = "0.0.0"
description = "Library for parsing USB requests"

[dependencies]
defmt = { git = "https://github.com/knurling-rs/defmt/", rev = "177c219", version = "1.0.1" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt/", rev = "177c219" }
