[package]
name = "uart-exercise"
version = "0.1.0"
edition = "2021"
authors = ["Ferrous Systems"]
license = "MIT OR Apache-2.0"
description = "A simple ARMv8-R UART driver exercise that runs in QEMU and compiles with Ferrocene"

[dependencies]
bitbybit = "1.3.3"
cortex-ar = { version = "0.1.0", features = ["critical-section-single-core"] }
cortex-r-rt = "0.1.0"
critical-section = "1.2.0"
derive-mmio = "0.3.0"
semihosting = { version = "0.1.20", features = ["stdio"] }

[profile.release]
opt-level = "s"
