[package]
name = "uart-exercise"
version = "0.1.0"
edition = "2021"
authors = ["Ferrous Systems"]
license = "MIT OR Apache-2.0"
description = "A simple ARMv8-R UART driver exercise that runs in QEMU and compiles with Ferrocene"

[dependencies]
bitbybit = "1.4"
cortex-ar = { version = "0.2", features = ["critical-section-single-core"] }
cortex-r-rt = "0.2"
critical-section = "1.2"
derive-mmio = "0.6"
semihosting = { version = "0.1.20", features = ["stdio"] }

[profile.release]
opt-level = "s"
