[package]
authors = ["Ferrous Systems"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "dk"
version = "0.0.0"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
defmt = "0.3.8"
defmt-rtt = "0.4"
embedded-hal = "1.0"
grounded = { version = "0.2.0", features = ["cas"] }
hal = { package = "nrf52840-hal", version = "0.18.0" }

[features]
advanced = []
radio = []
