[package]
authors = ["Ferrous Systems"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "dk"
version = "0.0.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
defmt = "1"
defmt-rtt = "1.1"
embassy-time = "0.5"
embedded-hal = "1.0"
nb = "1"
grounded = { version = "0.2.0", features = ["cas"] }
hal = { package = "embassy-nrf", version = "0.9", features = ["nrf52840", "unstable-pac"] }

[features]
advanced = []
radio = []
usbd = []
