[package]
authors = ["Ferrous Systems"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "dk"
version = "0.0.0"

[dependencies]
cortex-m = {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
embedded-hal = "0.2.7"
hal = { package = "nrf52840-hal", version = "0.16.0" }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
defmt = "0.3.5"
defmt-rtt = "0.4"

[features]
advanced = []
radio = []
