[package]
authors = ["Ferrous Systems"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "dongle"
version = "0.0.0"

[dependencies]
cortex-m = {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
defmt = "0.3.5"
defmt-rtt = "0.4"
embedded-hal = "0.2.7"
hal = { package = "nrf52840-hal", version = "0.16.0" }
heapless = "0.8.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
